[project]
name = "predictive-maintenance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "mlflow[extras]>=1.27.0",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "xgboost>=3.2.0",
]
